# ESVcrypt

./: .gitignore  CMakeLists.txt  README.md  README_ru.md  main.cpp
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
src/: main.cpp
src/core/: utils.cpp  utils.hpp
src/gui/: gui.cpp  gui.hpp
